add glfw to submodule and change cmakelist

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ project(VULKAN_SDL)
 
 # Add SDL3 from the vendor directory
 add_subdirectory(vendored/SDL EXCLUDE_FROM_ALL)
+# Add the GLFW subdirectory from our vendored folder
+add_subdirectory(${CMAKE_SOURCE_DIR}/vendored/glfw EXCLUDE_FROM_ALL)
+
 
 # Add the v4l2_vulkan_video project
 add_subdirectory(v4l2_vulkan_video)
@@ -15,6 +18,10 @@ add_subdirectory(triangle_glfw)
 # Add the v4l2_sdl_video project
 add_subdirectory(v4l2_sdl_video)
 
+
+add_subdirectory(vulkan_vertex_index_buffer)
+
+add_subdirectory(vulkan_only_texture)
 
 add_subdirectory(vulkan_texture_image)
 
