--- a/vulkan_vertex_index_buffer/CMakeLists.txt
+++ b/vulkan_vertex_index_buffer/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package(Vulkan REQUIRED)
 # ----------------------------------------------------------------------------
 # 4) Find GLFW (instead of SDL3)
 # ----------------------------------------------------------------------------
-find_package(glfw3 3.3 REQUIRED)  # ← replaces SDL3 find_package :contentReference[oaicite:0]{index=0}
+# find_package(glfw3 3.3 REQUIRED)  # ← replaces SDL3 find_package :contentReference[oaicite:0]{index=0}
 
 # ----------------------------------------------------------------------------
 # 5) Shader compilation
