add opengl triangle demo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,4 +31,6 @@ add_subdirectory(vulkan_texture_image1)
 
 add_subdirectory(vulkan_texture_image_class)
 
+add_subdirectory(opengl_triangle)
+
 add_subdirectory(opengl_camera_glfw)
