--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ add_subdirectory(vendored/SDL EXCLUDE_FROM_ALL)
 # Add the GLFW subdirectory from our vendored folder
 add_subdirectory(${CMAKE_SOURCE_DIR}/vendored/glfw EXCLUDE_FROM_ALL)
 
+# Add the assimp subdirectory from our vendored folder
+add_subdirectory(${CMAKE_SOURCE_DIR}/vendored/assimp EXCLUDE_FROM_ALL)
 
 # Add the v4l2_vulkan_video project
 add_subdirectory(v4l2_vulkan_video)
@@ -34,3 +36,5 @@ add_subdirectory(vulkan_texture_image_class)
 add_subdirectory(opengl_triangle)
 
 add_subdirectory(opengl_camera_glfw)
+
+add_subdirectory(opengl_model_loading)
