add model to support .dds and absolute path

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vendored/assimp"]
 	path = vendored/assimp
 	url = https://github.com/assimp/assimp.git
+[submodule "vendored/gli"]
+	path = vendored/gli
+	url = https://github.com/g-truc/gli.git
