--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,9 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/vendored/glfw EXCLUDE_FROM_ALL)
 # Add the assimp subdirectory from our vendored folder
 add_subdirectory(${CMAKE_SOURCE_DIR}/vendored/assimp EXCLUDE_FROM_ALL)
 
+# Add the assimp subdirectory from our vendored folder
+add_subdirectory(${CMAKE_SOURCE_DIR}/vendored/gli EXCLUDE_FROM_ALL)
+
 # Add the v4l2_vulkan_video project
 add_subdirectory(v4l2_vulkan_video)
 
@@ -38,3 +41,5 @@ add_subdirectory(opengl_triangle)
 add_subdirectory(opengl_camera_glfw)
 
 add_subdirectory(opengl_model_loading)
+
+add_subdirectory(opengl_fbxmodel_loading)
